<resources>
    <string name="Please_select_an_ID_type">Please select an ID type</string>
    <string name="Please_upload_your_selfie_image">Please upload your selfie image</string>
    <string name="Please_wait_while_we_submit_your_feedback">Please wait while we submit your feedback</string>
    <string name="aATozZ">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="aATozZNumeric">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="aATozZNumericSpecialChar">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="account">ACCOUNT</string>
    <string name="account_found">Account found!</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="active">Active</string>
    <string name="active_trip">Active trip</string>
    <string name="ad">Ad</string>
    <string name="ad_attribution">Ad</string>
    <string name="add_location">Add location</string>
    <string name="add_more">Add more</string>
    <string name="add_more_location">Add more location</string>
    <string name="add_more_route">Add more route</string>
    <string name="admob_app_id">ca-app-pub-5296893768563414~7861899649</string>
    <string name="airport_rail_around_you">Airport Rail around you</string>
    <string name="airport_rail_stations">Airport rail stations</string>
    <string name="alert_enable_location_for_nearby_stops_list">To see the nearest public transport stops please enable your location.</string>
    <string name="alerts">Alerts</string>
    <string name="all">All</string>
    <string name="all_metro_lines">All Metro Lines</string>
    <string name="all_stations">All Stations</string>
    <string name="allow">Allow</string>
    <string name="already_added_to_favourites">Already added to favourites</string>
    <string name="already_set">Already set</string>
    <string name="also_explore">Also Explore</string>
    <string name="also_find_us_on">Also find us on</string>
    <string name="alternatives">Alternatives</string>
    <string name="amateur">Amateur</string>
    <string name="an_error_occurred_in_referral_claim">An error occurred in claiming the referral code</string>
    <string name="an_error_occurred_while_accessing_location">An error occurred in accessing location services on your device</string>
    <string name="an_update_has_just_been_downloaded">An update has just been downloaded</string>
    <string name="android">android</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="any_other_issues_you_had_to_face">Any other issues you had to face?</string>
    <string name="app_id">79fe04b8-e7b8-4320-b4f2-dd76f48e35fd</string>
    <string name="app_name">Tummoc</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="are_you_sure_you_want_to_remove_this_address">Are you sure you want to remove this address?</string>
    <string name="are_you_sure_you_want_to_remove_this_route">Are you sure you want to remove this route?</string>
    <string name="arrived">Arrived</string>
    <string name="auto">Auto</string>
    <string name="available_balance">Available Balance</string>
    <string name="back_quotes">”</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="base_price">Base Price</string>
    <string name="beginner">Beginner</string>
    <string name="bike">Bike</string>
    <string name="bmtc_pass">BMTC Pass</string>
    <string name="bmtc_pass_support">BMTC Pass Support</string>
    <string name="bmtc_pass_validation_instruction_one">1. <b>SELF VALIDATION:</b> Click on the button - Scan conductor QR for validation - and scan the QR code displayed by the conductor</string>
    <string name="bmtc_pass_validation_instruction_two">2. <b>CONDUCTOR VALIDATION:</b> Present your pass QR code displayed here to the conductor for validation</string>
    <string name="bmtc_passes">BMTC Passes</string>
    <string name="bmtc_passes_support_url" formatted="false">https://assistbuddi.com/mobile_chat/?apiKey=%s&amp;org_id=%s&amp;theme_color=%s&amp;name=%s&amp;email=%s&amp;mobile=%s&amp;msg=%s&amp;reference=%s&amp;fcm_user_token=%s&amp;platform=%s&amp;city=%s</string>
    <string name="bmtc_passes_support_url_stage" formatted="false">https://stage-app.assistbuddi.com/mobile_chat/?apiKey=%s&amp;org_id=%s&amp;theme_color=%s&amp;name=%s&amp;email=%s&amp;mobile=%s&amp;msg=%s&amp;reference=%s&amp;fcm_user_token=%s&amp;platform=%s&amp;city=%s</string>
    <string name="bmtc_passes_whatsapp_support_deafult_msg" formatted="false">"Hi Tummoc. I'm %s. My contact number is %s. I need help with my %s - %s."</string>
    <string name="bmtc_passes_whatsapp_support_null_msg">Hi Tummoc. I need help regarding my BMTC pass.</string>
    <string name="bmtc_staff_issue_reporting">Please note down the vehicle or route number and reach out to us if BMTC conductor or line checker refuse to accept your digital pass</string>
    <string name="bmtc_support">BMTC Support</string>
    <string name="bmtc_support_contact_num">08022483777</string>
    <string name="bmtc_tickets">BMTC Tickets</string>
    <string name="book_a_new_pass">Book a new pass</string>
    <string name="book_pass">Book Pass</string>
    <string name="book_ticket">Book ticket</string>
    <string name="booked_a_pass_already">Booked a pass already?</string>
    <string name="booked_passes">Booked Passes</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_not_available">"We're sorry. 
We don't have booking service facility in %s"</string>
    <string name="booking_request">bookingRequest</string>
    <string name="booking_request_accepted">bookingRequestAccepted</string>
    <string name="booking_request_response">bookingRequestResponse</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="branch_key">key_live_ke8tQvBLjlHlE4TxagIkncapsrnIonoi</string>
    <string name="btmc_bus_pass_purchased_successfully">BMTC bus pass purchased successfully</string>
    <string name="bus_going_through_this_stop">Bus going through this stop</string>
    <string name="bus_number">Bus Number</string>
    <string name="bus_service">Bus service</string>
    <string name="bus_stations_around_you">Bus Stations around you</string>
    <string name="bus_stop_name">Bus Stop Name</string>
    <string name="bus_stops">Bus Stops</string>
    <string name="bus_stops_near_by">Bus stops nearby</string>
    <string name="bus_stops_near_you">Bus stops near you</string>
    <string name="bus_tickets">Bus tickets</string>
    <string name="bus_to_bus">Bus to Bus</string>
    <string name="buses_going_through_nearest_bus_stop">Buses going through nearest bus stop</string>
    <string name="buses_going_via_this_route">Buses going via this route</string>
    <string name="buy_bmtc_pass">Buy BMTC Pass</string>
    <string name="buy_passes_and_tickets">Buy Passes &amp; Tickets</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="call_us">Call Us</string>
    <string name="calories">Calories</string>
    <string name="cancel">Cancel</string>
    <string name="error_msg_pass_price_details">Unable to get the details</string>
    <string name="faqs">FAQs &amp; Support</string>
    <string name="feedback">Feedback</string>
    <string name="got_it">Got it!</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="mapmyindia_maps_loading_map">Loading Map…</string>
    <string name="mapmyindia_maps_retry">Retry</string>
    <string name="mapmyindia_maps_something_went_wrong_map_loading">Something went wrong, Please try again.</string>
    <string name="minimum_age_should_be_16_years">Minimum age should be 16 years</string>
    <string name="my_favourites">My Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="number_of_transits">Number of Transits</string>
    <string name="okay">Okay</string>
    <string name="pass_fare">Pass fare</string>
    <string name="pass_number">Pass number</string>
    <string name="pass_type_lowercase">Pass type</string>
    <string name="pass_valid_till">Pass valid till</string>
    <string name="pass_validation_successful">Pass Validation Successful</string>
    <string name="please_enable_location_for_map_view">Please enable location access to see the map view</string>
    <string name="price">Price</string>
    <string name="refer_and_earn">Referrals</string>
    <string name="retry">Retry</string>
    <string name="saved_locations">Saved locations</string>
    <string name="saved_places">Saved Places</string>
    <string name="saved_route">Saved routes</string>
    <string name="selfie_point_one">Do not cover your face or wear cap, sunglasses, mask etc. while clicking your selfie</string>
    <string name="selfie_point_three">Please avoid too much or too less of sunlight exposure</string>
    <string name="selfie_point_two">Take the shot with a straight face and avoid goofy poses</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="sort_by">Sort by</string>
    <string name="str_emergency_contacts">Emergency Contacts</string>
    <string name="str_logout">Logout</string>
    <string name="str_ok">OK</string>
    <string name="str_privacy">Privacy Policy</string>
    <string name="str_support">Support</string>
    <string name="switch_city">Switch City</string>
    <string name="terms">Terms of Usage</string>
    <string name="time">Time</string>
    <string name="tummoc_blogs">Tummoc Blogs</string>
    <string name="tummoc_money">Tummoc Money</string>
</resources>