<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layoutContainer" android:background="@drawable/bg_solid_white_rounded" android:paddingLeft="@dimen/dp_16" android:paddingTop="@dimen/dp_10" android:paddingRight="@dimen/dp_16" android:paddingBottom="@dimen/dp_10" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/darkBlue" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort_by" android:fontFamily="@font/mazzard_h_semibold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup android:orientation="vertical" android:id="@id/rgSortFilters" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle">
        <RadioButton android:textSize="@dimen/sp_14" android:textColor="@color/darkBlue" android:id="@id/rbTime" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="false" android:button="@drawable/radio_selector" android:text="@string/time" android:fontFamily="@font/mazzard_m_medium" android:paddingStart="@dimen/dp_8" />
        <RadioButton android:textSize="@dimen/sp_14" android:textColor="@color/darkBlue" android:id="@id/rbPrice" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="false" android:button="@drawable/radio_selector" android:text="@string/price" android:fontFamily="@font/mazzard_m_medium" android:paddingStart="@dimen/dp_8" />
        <RadioButton android:textSize="@dimen/sp_14" android:textColor="@color/darkBlue" android:id="@id/rbNumOfTransits" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="false" android:button="@drawable/radio_selector" android:text="@string/number_of_transits" android:fontFamily="@font/mazzard_m_medium" android:paddingStart="@dimen/dp_8" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
