<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/popup_selfie_instructions_0" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_20" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_20" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/ivTummocMascot" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_50" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_chiyaa_for_selfie" />
    <TextView android:textSize="@dimen/sp_14" android:gravity="center" android:id="@id/tvPointOne" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/selfie_point_one" android:fontFamily="@font/mazzard_h_semibold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ivTummocMascot" />
    <TextView android:textSize="@dimen/sp_14" android:gravity="center" android:id="@id/tvPointTwo" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/selfie_point_two" android:fontFamily="@font/mazzard_h_semibold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvPointOne" />
    <TextView android:textSize="@dimen/sp_14" android:gravity="center" android:id="@id/tvPointThree" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/selfie_point_three" android:fontFamily="@font/mazzard_h_semibold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvPointTwo" />
    <com.google.android.material.button.MaterialButton android:id="@id/btnGotIt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:minHeight="@dimen/dp_60" android:text="@string/got_it" android:textAllCaps="false" android:fontFamily="@font/mazzard_m_regular" app:cornerRadius="@dimen/dp_8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvPointThree" />
</androidx.constraintlayout.widget.ConstraintLayout>
