<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingLeft="@dimen/dp_16" android:paddingTop="@dimen/dp_12" android:paddingRight="@dimen/dp_16" android:paddingBottom="@dimen/dp_12" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/containerPriceDetails" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/ivValidationStatus" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_pass_validation_success" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_22" android:textColor="@color/teal" android:gravity="center" android:id="@id/tvTitleSuccess" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/pass_validation_successful" android:fontFamily="@font/mazzard_h_semibold" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ivValidationStatus" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:id="@id/tvLabelPassNum" android:layout_marginTop="@dimen/dp_10" android:text="@string/pass_number" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitleSuccess" style="@style/PassPreviewLabel" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:id="@id/tvPassNum" android:layout_marginTop="@dimen/dp_6" app:layout_constraintBottom_toBottomOf="@id/tvLabelPassNum" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/tvLabelPassNum" style="@style/PassPreviewValues" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:id="@id/tvLabelPassType" android:text="@string/pass_type_lowercase" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvLabelPassNum" style="@style/PassPreviewLabel" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:id="@id/tvPassType" android:layout_marginTop="@dimen/dp_6" app:layout_constraintBottom_toBottomOf="@id/tvLabelPassType" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/tvLabelPassType" style="@style/PassPreviewValues" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:id="@id/tvLabelPassValidTill" android:text="@string/pass_valid_till" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvLabelPassType" style="@style/PassPreviewLabel" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:id="@id/tvPassValidTill" android:layout_marginTop="@dimen/dp_6" app:layout_constraintBottom_toBottomOf="@id/tvLabelPassValidTill" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/tvLabelPassValidTill" style="@style/PassPreviewValues" />
        <View android:id="@id/viewDivider" android:background="@color/divider4D0E2D39" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="@dimen/dp_8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvPassValidTill" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:textColor="@color/darkBlue" android:id="@id/tvLabelTicketTotalAmount" android:text="@string/pass_fare" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/viewDivider" style="@style/PassPreviewLabel" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_16" android:id="@id/tvTicketTotalAmount" android:layout_marginTop="@dimen/dp_6" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/viewDivider" style="@style/PassPreviewValues" />
        <com.google.android.material.button.MaterialButton android:id="@id/btnOK" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:minHeight="@dimen/dp_60" android:text="@string/str_ok" android:textAllCaps="false" android:fontFamily="@font/mazzard_m_regular" app:cornerRadius="@dimen/dp_8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTicketTotalAmount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/containerErrorView" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/ivTummocMascot" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_50" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_error" />
        <TextView android:textSize="@dimen/sp_14" android:gravity="center" android:id="@id/tvTitleError" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/error_msg_pass_price_details" android:fontFamily="@font/mazzard_m_regular" app:layout_constraintEnd_toEndOf="@id/ivTummocMascot" app:layout_constraintStart_toStartOf="@id/ivTummocMascot" app:layout_constraintTop_toBottomOf="@id/ivTummocMascot" />
        <com.google.android.material.button.MaterialButton android:id="@id/btnRetry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:minHeight="@dimen/dp_60" android:text="@string/retry" android:textAllCaps="false" android:fontFamily="@font/mazzard_m_regular" app:cornerRadius="@dimen/dp_8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitleError" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
