<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/popup_enable_location_0" android:padding="@dimen/dp_24" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/ivTummocMascot" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_50" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_chiyaa_city_selection" />
    <TextView android:textSize="@dimen/sp_14" android:gravity="center" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/please_enable_location_for_map_view" android:fontFamily="@font/mazzard_m_regular" app:layout_constraintEnd_toEndOf="@id/ivTummocMascot" app:layout_constraintStart_toStartOf="@id/ivTummocMascot" app:layout_constraintTop_toBottomOf="@id/ivTummocMascot" />
    <com.google.android.material.button.MaterialButton android:id="@id/btnAllow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:minHeight="@dimen/dp_60" android:text="@string/allow" android:textAllCaps="false" android:fontFamily="@font/mazzard_m_regular" app:cornerRadius="@dimen/dp_8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/btnSkip" app:layout_constraintTop_toBottomOf="@id/tvTitle" />
    <com.google.android.material.button.MaterialButton android:id="@id/btnSkip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:minHeight="@dimen/dp_55" android:text="@string/skip_for_now" android:textAllCaps="false" android:fontFamily="@font/mazzard_m_regular" android:textAlignment="textStart" android:letterSpacing="0.0" app:cornerRadius="@dimen/dp_8" app:layout_constraintEnd_toStartOf="@id/btnAllow" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle" app:strokeWidth="0.0dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
