<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <DatePicker android:theme="@style/DefaultNumberPickerTheme" android:id="@id/datePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:calendarViewShown="false" android:datePickerMode="spinner" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/DefaultNumberPickerTheme" />
    <com.google.android.material.button.MaterialButton android:textColor="@color/colorGrey61" android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:textAllCaps="false" android:layout_marginStart="@dimen/dp_12" android:letterSpacing="0.0" app:layout_constraintBottom_toTopOf="@id/space2" app:layout_constraintEnd_toStartOf="@id/accept" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvNote" app:strokeWidth="0.0dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    <com.google.android.material.button.MaterialButton android:id="@id/accept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/dp_100" android:minHeight="@dimen/dp_55" android:text="@string/okay" android:textAllCaps="false" android:layout_marginEnd="@dimen/dp_12" android:letterSpacing="0.0" app:backgroundTint="@color/lightBlueActionBtn" app:cornerRadius="@dimen/dp_8" app:layout_constraintBottom_toTopOf="@id/space2" app:layout_constraintEnd_toEndOf="@id/datePicker" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/cancel" app:layout_constraintTop_toBottomOf="@id/tvNote" app:strokeWidth="0.0dp" />
    <Space android:id="@id/space2" android:layout_width="0.0dp" android:layout_height="@dimen/dp_12" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/accept" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_12" android:textColor="@color/redFavorite" android:gravity="center_horizontal" android:id="@id/tvNote" android:visibility="gone" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/minimum_age_should_be_16_years" android:fontFamily="@font/mazzard_h_bold" android:layout_marginStart="@dimen/dp_8" android:layout_marginEnd="@dimen/dp_8" app:layout_constraintEnd_toEndOf="@id/datePicker" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/datePicker" />
</androidx.constraintlayout.widget.ConstraintLayout>
